# Leihyn

./: CLAUDE.md  README.md
sentinel/: COMMANDS.md  README.md  ROADMAP.md  pyproject.toml  toknow.md
sentinel/knowledge_base/exploits/: database.yaml  database_extended.yaml
sentinel/knowledge_base/languages/: cairo_deep.yaml  cosmwasm_deep.yaml  move_deep.yaml  solana_deep.yaml  vulnerability_patterns.yaml
sentinel/knowledge_base/protocols/: integration_checklists.yaml  protocol_invariants.yaml
sentinel/knowledge_base/reports/: contest_formats.yaml  example_findings.yaml
sentinel/knowledge_base/vulnerabilities/: access_control.yaml  catalog.yaml  reentrancy.yaml  solana.yaml
sentinel/src/: __init__.py  cli.py
sentinel/src/agents/: __init__.py  attack_synthesizer.py  deep_hunter.py  devils_advocate.py  hunter_swarm.py  invariant_agent.py  multi_language_recon.py  orchestrator.py  poc_generator.py  recon.py  report_writer.py
sentinel/src/core/: __init__.py  agent.py  bug_detection.py  economic_analyzer.py  formal_verification.py  fuzzing_generator.py  languages.py  llm.py  llm_guided.py  poc_generator.py  report_generator.py  semantic_analyzer.py  sentinel.py  symbolic_integration.py  test_templates.py  types.py  ultrathink_100.py  ultrathink_max.py  ultrathink_multilang.py  ultrathink_prompts.py  ultrathink_strict.py
sentinel/src/integrations/: __init__.py  etherscan.py  halmos.py  immunefi.py
sentinel/src/knowledge/: __init__.py  competitive_intel.py  embeddings.py  exploit_matcher.py  invariants.py
sentinel/src/tools/: __init__.py  cairo_analyzer.py  (+5 more)
(+119 files in other folders)
